--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">VideoPlayer</string>
+    <string name="app_name">Orange Player</string>
+
+    <string name="pick_video">Pick Video</string>
 </resources>
