完成webdav及其它远程文件遍历类的抽象实现，优化播放远程视频卡顿问题及缓冲不显示问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="refuse">Refuse</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="connection_not_accessible">Connection not accessible</string>
 </resources>
